// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FLPSpinner > renders as expected 1`] = `
<div>
  <div
    class="d_inline-flex ai_center gap_8px"
  >
    <style>
      
        @keyframes spin {
          to { transform: rotate(360deg); }
        }
      
    </style>
    <div
      class="d_inline-block w_24px h_24px bd_2px_solid_rgba(255,_255,_255,_0.2) bd-t-c_primary bdr_50% anim_spin_0.8s_linear_infinite"
      data-testid="flp-spinner"
    />
  </div>
</div>
`;

exports[`FLPSpinner > renders as expected with a label 1`] = `
<div>
  <div
    class="d_inline-flex ai_center gap_8px"
  >
    <style>
      
        @keyframes spin {
          to { transform: rotate(360deg); }
        }
      
    </style>
    <div
      class="d_inline-block w_24px h_24px bd_2px_solid_rgba(255,_255,_255,_0.2) bd-t-c_primary bdr_50% anim_spin_0.8s_linear_infinite"
      data-testid="flp-spinner"
    />
    <p
      class="fs_md fw_normal lh_normal ls_normal m_0 "
    >
      Processing...
    </p>
  </div>
</div>
`;

exports[`FLPSpinner > renders as expected with a size 1`] = `
<div>
  <div
    class="d_inline-flex ai_center gap_8px"
  >
    <style>
      
        @keyframes spin {
          to { transform: rotate(360deg); }
        }
      
    </style>
    <div
      class="d_inline-block w_48px h_48px bd_2px_solid_rgba(255,_255,_255,_0.2) bd-t-c_primary bdr_50% anim_spin_0.8s_linear_infinite"
      data-testid="flp-spinner"
    />
  </div>
</div>
`;
